selfhost/test/typechecker/binary/eq_error.3.out
Error at %FILE_NAME%:2:6
Type mismatch
  |  a == 456
          ^
Expected: Int?
but instead found: Int
